<resources>
    <string name="app_name">Media Player</string>
    <string name="channel_name">Playback</string>
    <string name="channel_desc">Audio playback controls</string>
    <string name="album_art">Album art</string>
    <string name="track_title">Track title</string>
    <string name="initial_time">0:00</string>
    <string name="time_total">-0:00</string>
    <string name="previous">Previous button</string>
    <string name="play">Play button</string>
    <string name="pause">Pause button</string>
    <string name="stop">Stop button</string>
    <string name="next">Next button</string>
</resources>